--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "prettier-plugin-tailwindcss": "^0",
     "prisma": "^5",
     "tailwindcss": "^3",
+    "ts-node": "^10",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
