--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5",
+    "@restype/client": "^0.1.4",
+    "@restype/next": "^0.1.4",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
