--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@restype/client": "^0.1.4",
     "@restype/next": "^0.1.4",
     "next": "13.5.6",
+    "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3"
